--- a/client/src/app/product/product.component.html
+++ b/client/src/app/product/product.component.html
@@ -42,7 +42,7 @@
     <!-- Products -->
     <div class="row p-3">
 
-        <div class="col-md-4" *ngFor="let product of products" style="height: 340px;">
+        <div class="col-md-4 mb-2 mt-2" *ngFor="let product of products">
             <div class="p-2 border bg-light">
                 <h3 class="text-center">{{product.name}}</h3>
                 <p>{{product.tagline}}</p>
