--- a/client/src/app/product/product.component.html
+++ b/client/src/app/product/product.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 
+    <!-- Title -->
     <div class="row p-3 mt-3 mb-3 bg-light">
-
         <div class="col-md-12 text-center">
             <h3 class="text-center">Product Hunt API</h3>
         </div>
